[fix] fix Enter Message
Former-commit-id: 89912a79cef970d9b31dc4c74d3f9e00b520701c